--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -28,9 +28,10 @@
     <%= link_to "商品の編集", "#", method: :get, class: "item-red-btn" %>
     <p class="or-text">or</p>
     <%= link_to "削除", "#", data: {turbo_method: :delete}, class:"item-destroy" %>
+   <% else %>
    <%# elsif @item.sale_status %>
     <%= link_to "購入画面に進む", "#" ,class:"item-red-btn"%>
-    <% end %>
+   <% end %>
   <% end %>
 
     <div class="item-explain-box">
