--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -8,11 +8,11 @@
     </h2>
     <div class="item-img-content">
       <%= image_tag @item.image, class:"item-box-img" %>
-       <% if @item.purchasehistory.present? %>
-          <div class="sold-out">
-           <span>Sold Out!!</span>
-          </div>
-       <% end %>
+      <%# 商品が売れている場合は、sold outを表示しましょう %>
+      <%# div class="sold-out">
+        <span>Sold Out!!</span>
+      </div>
+      <%# //商品が売れている場合は、sold outを表示しましょう %>
     </div>
     <div class="item-price-box">
       <span class="item-price">
@@ -24,13 +24,14 @@
     </div>
 
   <% if user_signed_in? %>
-   <% if current_user.id == @item.user_id && !@item.purchasehistory.present? %>
+   <% if current_user.id == @item.user_id %>
     <%= link_to "商品の編集",edit_item_path(@item.id), method: :get, class: "item-red-btn" %>
     <p class="or-text">or</p>
     <%= link_to "削除", item_path(@item), method: :delete, data: {turbo_method: :delete}, class:"item-destroy" %>
-  <% elsif !@item.sold_out? %>
-    <%= link_to "購入画面に進む", item_orders_path(@item.id), data: { turbo: false }, class:"item-red-btn"%>
-  <% end %>
+   <% else %>
+   <%# elsif @item.sale_status %>
+    <%= link_to "購入画面に進む", "#" ,class:"item-red-btn"%>
+   <% end %>
   <% end %>
 
     <div class="item-explain-box">
@@ -52,11 +53,11 @@
         </tr>
         <tr>
           <th class="detail-item">配送料の負担</th>
-          <td class="detail-value"><%= @item.shipping_fee.name %></td>
+          <td class="detail-value"><%= @item.prefecture.name %></td>
         </tr>
         <tr>
           <th class="detail-item">発送元の地域</th>
-          <td class="detail-value"><%= @item.prefecture.name %></td>
+          <td class="detail-value"><%= @item.shipping_fee.name %></td>
         </tr>
         <tr>
           <th class="detail-item">発送日の目安</th>
