--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
   <%= csp_meta_tag %>
   <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
   <%= javascript_importmap_tags %>
-  <%= javascript_pack_tag 'application', 'data-turbo-track': 'reload' %
+  <%= javascript_pack_tag 'application', 'data-turbo-track': 'reload' %>
 </head>
 
 <body>
