--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -24,12 +24,12 @@
     </div>
 
  <% if user_signed_in? %>
-  <% if current_user.id == @item.user_id && !@item.purchasehistory.present? %>
-    <%= link_to "商品の編集",edit_item_path(@item.id), method: :get, class: "item-red-btn" %>
+  <% if current_user.id == @item.user_id && !@item.sold_out? %>
+    <%= link_to "商品の編集", edit_item_path(@item.id), method: :get, class: "item-red-btn" %>
     <p class="or-text">or</p>
-    <%= link_to "削除", item_path(@item), method: :delete, data: {turbo_method: :delete}, class:"item-destroy" %>
+    <%= link_to "削除", item_path(@item), method: :delete, data: {turbo_method: :delete}, class: "item-destroy" %>
   <% elsif !@item.sold_out? %>
-    <%= link_to "購入画面に進む", item_orders_path(@item.id), data: { turbo: false }, class:"item-red-btn"%>
+    <%= link_to "購入画面に進む", item_orders_path(@item.id), data: { turbo: false }, class: "item-red-btn" %>
   <% end %>
  <% end %>
 
