--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -100,7 +100,7 @@
     </a>
   </div>
   
-  <a href="#" class="another-item"><%= "@item.category.name" %>をもっと見る</a>
+  <a href="#" class="another-item"><%= @item.category.name %>をもっと見る</a>
   
 </div>
 
